cmake_minimum_required(VERSION 3.29)
project(oop23_24)

set(CMAKE_CXX_STANDARD 20)

add_executable(oop23_24 main.cpp)

add_executable(ispitna1 oop_jan_ispitna/ispitna1.cpp)
add_executable(ispitna2 oop_jan_ispitna/ispitna2.cpp)
add_executable(ispitna3 oop_jan_ispitna/ispitna3.cpp)
add_executable(ispitna4 oop_jan_ispitna/ispitna4.cpp)
add_executable(ispitna5 oop_jan_ispitna/ispitna5.cpp)
add_executable(ispitna6 oop_jan_ispitna/ispitna6.cpp)
add_executable(ispitna7 oop_jan_ispitna/ispitna7.cpp)
add_executable(ispitna8 oop_jan_ispitna/ispitna8.cpp)
add_executable(ispitna9 oop_jan_ispitna/ispitna9.cpp)
add_executable(ispitna10 oop_jan_ispitna/ispitna10.cpp)
add_executable(ispitna11 oop_jan_ispitna/ispitna11.cpp)
add_executable(ispitna12 oop_jan_ispitna/ispitna12.cpp)
add_executable(ispitna13 oop_jan_ispitna/ispitna13.cpp)
add_executable(ispitna14 oop_jan_ispitna/ispitna14.cpp)
add_executable(ispitna15 oop_jan_ispitna/ispitna15.cpp)
add_executable(ispitna16 oop_jan_ispitna/ispitna16.cpp)
add_executable(ispitna17 oop_jan_ispitna/ispitna17.cpp)
add_executable(ispitna18 oop_jan_ispitna/ispitna18.cpp)
add_executable(ispitna19 oop_jan_ispitna/ispitna19.cpp)
add_executable(ispitna20 oop_jan_ispitna/ispitna20.cpp)
add_executable(ispitna21 oop_jan_ispitna/ispitna21.cpp)
add_executable(ispitna22 oop_jan_ispitna/ispitna22.cpp)
add_executable(ispitna23 oop_jan_ispitna/ispitna23.cpp)
add_executable(ispitna24 oop_jan_ispitna/ispitna24.cpp)
add_executable(ispitna25 oop_jan_ispitna/ispitna25.cpp)
add_executable(ispitna26 oop_jan_ispitna/ispitna26.cpp)
add_executable(ispitna27 oop_jan_ispitna/ispitna27.cpp)
add_executable(ispitna28 oop_jan_ispitna/ispitna28.cpp)
add_executable(ispitna29 oop_jan_ispitna/ispitna29.cpp)
add_executable(ispitna30 oop_jan_ispitna/ispitna30.cpp)
add_executable(ispitna31 oop_jan_ispitna/ispitna31.cpp)
#add_executable(ispitna32 oop_jan_ispitna/ispitna32.cpp)
#add_executable(ispitna33 oop_jan_ispitna/ispitna33.cpp)
#add_executable(ispitna34 oop_jan_ispitna/ispitna34.cpp)
#add_executable(ispitna35 oop_jan_ispitna/ispitna35.cpp)
#add_executable(ispitna36 oop_jan_ispitna/ispitna36.cpp)
#add_executable(ispitna37 oop_jan_ispitna/ispitna37.cpp)
#add_executable(ispitna38 oop_jan_ispitna/ispitna38.cpp)
#add_executable(ispitna39 oop_jan_ispitna/ispitna39.cpp)
#add_executable(ispitna40 oop_jan_ispitna/ispitna40.cpp)
#add_executable(ispitna41 oop_jan_ispitna/ispitna41.cpp)
#add_executable(ispitna42 oop_jan_ispitna/ispitna42.cpp)
#add_executable(ispitna43 oop_jan_ispitna/ispitna43.cpp)
#add_executable(ispitna44 oop_jan_ispitna/ispitna44.cpp)
#add_executable(ispitna45 oop_jan_ispitna/ispitna45.cpp)
#add_executable(ispitna46 oop_jan_ispitna/ispitna46.cpp)
#add_executable(ispitna47 oop_jan_ispitna/ispitna47.cpp)
#add_executable(ispitna48 oop_jan_ispitna/ispitna48.cpp)
#add_executable(ispitna49 oop_jan_ispitna/ispitna49.cpp)
#add_executable(ispitna50 oop_jan_ispitna/ispitna50.cpp)

add_executable(aud11 aud_online/kolokviumski/zad1_prv_kolokvium_vezhbi.cpp)
add_executable(aud12 aud_online/kolokviumski/aud12.cpp)
add_executable(aud13 aud_online/kolokviumski/aud13.cpp)

add_executable(aud21 aud_online/kvali-sept/aud21.cpp)
add_executable(aud22 aud_online/kvali-sept/aud22.cpp)
add_executable(aud23 aud_online/kvali-sept/aud23.cpp)

add_executable(aud1 aud_online/aud1/aud1.cpp)
add_executable(aud2 aud_online/aud1/aud2.cpp)
add_executable(aud3 aud_online/aud1/aud3.cpp)

add_executable(aud4 aud_online/aud2/aud4.cpp)
add_executable(aud5 aud_online/aud2/aud5.cpp)
add_executable(aud6 aud_online/aud2/aud6.cpp)

add_executable(aud7 aud_online/aud3/aud7.cpp)
add_executable(aud8 aud_online/aud3/aud8.cpp)
add_executable(aud9 aud_online/aud3/aud9.cpp)
add_executable(aud10 aud_online/aud3/aud10.cpp)

add_executable(aud14 aud_online/aud4/aud14.cpp)
add_executable(aud15 aud_online/aud4/aud15.cpp)

add_executable(aud16 aud_online/aud5/aud16.cpp)
add_executable(aud17 aud_online/aud5/aud17.cpp)

add_executable(aud18 aud_online/aud6/aud18.cpp)
add_executable(aud19 aud_online/aud6/aud19.cpp)
add_executable(aud20 aud_online/aud6/aud20.cpp)


add_executable(aud24 aud_online/aud6/aud24.cpp)
add_executable(aud25 aud_online/aud7/aud25.cpp)
add_executable(aud26 aud_online/aud7/aud26.cpp)
add_executable(aud27 aud_online/aud7/aud27.cpp)
add_executable(aud28 aud_online/aud8/aud28.cpp)
add_executable(aud29 aud_online/aud8/aud29.cpp)
add_executable(aud30 aud_online/aud8/aud30.cpp)
add_executable(aud31 aud_online/aud31.cpp)
add_executable(aud32 aud_online/aud32.cpp)
add_executable(aud33 aud_online/aud33.cpp)
add_executable(aud34 aud_online/aud34.cpp)
add_executable(aud35 aud_online/aud35.cpp)
add_executable(aud36 aud_online/aud36.cpp)
add_executable(aud37 aud_online/aud37.cpp)
add_executable(aud38 aud_online/aud38.cpp)
add_executable(aud39 aud_online/aud39.cpp)
add_executable(aud40 aud_online/aud40.cpp)
add_executable(aud41 aud_online/aud41.cpp)
add_executable(aud42 aud_online/aud42.cpp)
add_executable(aud43 aud_online/aud43.cpp)
add_executable(aud44 aud_online/aud44.cpp)
add_executable(aud45 aud_online/aud45.cpp)
add_executable(aud46 aud_online/aud46.cpp)
add_executable(aud47 aud_online/aud47.cpp)
add_executable(aud48 aud_online/aud48.cpp)
add_executable(aud49 aud_online/aud49.cpp)
add_executable(aud50 aud_online/aud50.cpp)


